Update .gitignore to exclude build and object directories
Updated the .gitignore file to include new paths for build and object directories, specifically targeting the Debug/net8.0 directories for various projects within the solution. The added paths are:

- TradingBot.Api/bin/Debug/net8.0
- TradingBot.Api/obj
- TradingBot.Components/bin/Debug/net8.0
- TradingBot.Components/obj
- TradingBot.Domain/obj
- TradingBot.ServiceClients/obj
- TradingBot.Web_old/obj
- TradingBot.Domain/bin/Debug/net8.0
- TradingBot.ServiceClients/bin/Debug/net8.0
- TradingBot.Web/bin/Debug/net8.0
- TradingBot.Web/obj

Existing paths for .vs, /ConsoleApp.PoC/obj, and /ConsoleApp.PoC/bin/Debug/net8.0 remain unchanged.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,14 @@
 /.vs
 /ConsoleApp.PoC/obj
 /ConsoleApp.PoC/bin/Debug/net8.0
+/TradingBot.Api/bin/Debug/net8.0
+/TradingBot.Api/obj
+/TradingBot.Components/bin/Debug/net8.0
+/TradingBot.Components/obj
+/TradingBot.Domain/obj
+/TradingBot.ServiceClients/obj
+/TradingBot.Web_old/obj
+/TradingBot.Domain/bin/Debug/net8.0
+/TradingBot.ServiceClients/bin/Debug/net8.0
+/TradingBot.Web/bin/Debug/net8.0
+/TradingBot.Web/obj
